# ocmemog

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  README.md  REVIEW.md  index.ts  openclaw.plugin.json  package.json  pyproject.toml  requirements-test.txt  requirements.txt
brain/: __init__.py
docs/: release-checklist.md  usage.md
ocmemog/: __init__.py  doctor.py
scripts/: install-ocmemog.sh  ocmemog-backfill-vectors.py  ocmemog-context.sh  ocmemog-continuity-benchmark.py  ocmemog-demo.py  ocmemog-doctor.py  ocmemog-failover-test.sh  ocmemog-guard.sh  ocmemog-hydrate-stress.py  ocmemog-install.sh  ocmemog-integrated-proof.py  ocmemog-load-test.py  ocmemog-ponder.sh  ocmemog-recall-test.py  ocmemog-reindex-vectors.py  ocmemog-release-check.sh  ocmemog-reliability-soak.py  ocmemog-sidecar.sh  ocmemog-soak-report.py  ocmemog-soak-test.py  ocmemog-test-rig.py  ocmemog-transcript-append.py  ocmemog-transcript-watcher.py  ocmemog-transcript-watcher.sh
tests/: test_auto_hydration_agent_scope.ts  test_candidate_dedup.py  test_continuity_benchmark.py  test_contradiction_candidates.py  test_doctor.py  test_duplicate_candidates.py  test_governance_audit.py  test_governance_auto_resolve.py  test_governance_auto_resolve_policy.py  test_governance_auto_resolve_profile.py  test_governance_autopromotion.py  test_governance_matrix.py  test_governance_queue.py  test_governance_review.py  test_governance_rollback.py  test_governance_summary.py  test_hybrid_retrieval.py  test_hydrate_stability.py  test_ingest_classification.py  test_memory_governance.py  test_regressions.py  (+13 more)
(+94 files in other folders)
