[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocmemog-sidecar"
version = "0.1.11"
description = "FastAPI sidecar for the ocmemog OpenClaw memory plugin"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
]

[tool.setuptools]
packages = [
  "brain",
  "brain.runtime",
  "brain.runtime.memory",
  "brain.runtime.security",
  "ocmemog",
  "ocmemog.runtime",
  "ocmemog.runtime.memory",
  "ocmemog.runtime.security",
  "ocmemog.sidecar",
]
